fixed z-index on top nav

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -18,6 +18,7 @@
   align-items: center;
   &[aria-hidden="true"] {
     opacity: 0;
+    z-index: 0;
     & .content {
       opacity: 0;
       transform: translateY(-100px) scale(0.5);
